Branding: Use "Apache" in Maven module names and descriptions.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1619388 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -33,7 +33,7 @@
   <artifactId>httpcore-ab</artifactId>
   <name>Apache HttpCore Benchmarking Tool</name>
   <description>
-   AB clone based on HttpCore
+   Apache AB clone based on HttpCore
   </description>
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
