Added Apache RAT plugin
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1625582 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -300,6 +300,28 @@
           <comparisonVersion>${api.comparison.version}</comparisonVersion>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <version>0.11</version>
+        <executions>
+          <execution>
+            <phase>verify</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <excludes>
+                <exclude>NOTICE.*</exclude>
+                <exclude>LICENSE.*</exclude>
+                <exclude>README.*</exclude>
+                <exclude>**/.*</exclude>
+                <exclude>.*/**/*</exclude>
+              </excludes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
