--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.4-alpha2-SNAPSHOT</version>
+    <version>4.4-beta1</version>
   </parent>
   <artifactId>httpcore-ab</artifactId>
   <name>Apache HttpCore Benchmarking Tool</name>
