RAT check to exclude truststore files
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1631217 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,12 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <excludes>
+            <exclude>src/docbkx/resources/**</exclude>
+            <exclude>src/test/resources/*.truststore</exclude>
+          </excludes>
+        </configuration>
       </plugin>
     </plugins>
   </build>
