Removed deprecated classes
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1634008 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
     <!-- Override parent 7 setting for deprecation (only - other settings stand)-->
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
-    <maven.compiler.showDeprecation>false</maven.compiler.showDeprecation>
+    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     <junit.version>4.11</junit.version>
     <mockito.version>1.8.5</mockito.version>
     <commons-logging.version>1.2</commons-logging.version>
