--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -86,8 +86,8 @@
           <quiet>true</quiet>
           <source>${maven.compiler.source}</source>
           <links>
-            <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
-            <link>http://hc.apache.org/httpcomponents-core-ga/httpcore/apidocs/</link>
+            <link>http://docs.oracle.com/javase/7/docs/api/</link>
+            <link>http://hc.apache.org/httpcomponents-core-4.4.x/httpcore/apidocs/</link>
           </links>
         </configuration>
         <reportSets>
