--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
           <quiet>true</quiet>
           <source>${maven.compiler.source}</source>
           <links>
-            <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
+            <link>http://docs.oracle.com/javase/6/docs/api/</link>
           </links>
         </configuration>
       </plugin>
