--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -38,7 +38,11 @@
   </description>
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>bundle</packaging>
-
+  <properties>
+      <pax.url.version>2.0.0</pax.url.version>
+      <pax.exam.version>3.5.0</pax.exam.version>
+      <slf4j.version>1.5.4</slf4j.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -50,10 +54,70 @@
       <artifactId>httpcore-nio</artifactId>
       <version>${project.version}</version>
     </dependency>
+      <dependency>
+          <groupId>org.ops4j.pax.exam</groupId>
+          <artifactId>pax-exam-container-native</artifactId>
+          <version>${pax.exam.version}</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.ops4j.pax.exam</groupId>
+          <artifactId>pax-exam-junit4</artifactId>
+          <scope>test</scope>
+          <version>${pax.exam.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.ops4j.pax.exam</groupId>
+          <artifactId>pax-exam-link-mvn</artifactId>
+          <scope>test</scope>
+          <version>${pax.exam.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.ops4j.pax.url</groupId>
+          <artifactId>pax-url-aether</artifactId>
+          <version>${pax.url.version}</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <scope>test</scope>
+          <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <scope>test</scope>
+          <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
     <plugins>
+      <plugin>
+         <groupId>org.apache.servicemix.tooling</groupId>
+         <artifactId>depends-maven-plugin</artifactId>
+         <version>1.2</version>
+         <executions>
+           <execution>
+              <id>generate-depends-file</id>
+              <phase>generate-resources</phase>
+              <goals>
+                <goal>generate-depends-file</goal>
+              </goals>
+           </execution>
+         </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
@@ -73,6 +137,30 @@
         <configuration>
           <skip>true</skip>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${hc.surefire.version}</version>
+        <executions>
+          <execution>
+            <id>it</id>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+          </goals>
+          <configuration>
+              <includes>
+                  <include>**/*IT.class</include>
+              </includes>
+              <systemPropertyVariables>
+                  <project.build.directory>${project.build.directory}</project.build.directory>
+                  <project.version>${project.version}</project.version>
+                  <java.awt.headless>true</java.awt.headless>
+                  </systemPropertyVariables>
+          </configuration>
+        </execution>
+        </executions>
       </plugin>
     </plugins>
     <finalName>org.apache.httpcomponents.httpcore_${project.version}</finalName>
