Do not check .pmd files for RAT reports.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1697545 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,7 @@
         </executions>
         <configuration>
           <excludes>
+            <exclude>.pmd</exclude>
             <exclude>src/docbkx/resources/**</exclude>
             <exclude>src/test/resources/*.truststore</exclude>
           </excludes>
