--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -73,6 +73,26 @@
           </instructions>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <version>${hc.rat.version}</version>
+        <executions>
+          <execution>
+            <phase>verify</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <excludes>
+            <exclude>.externalToolBuilders/**</exclude>			
+            <exclude>.pmd</exclude>			
+            <exclude>maven-eclipse.xml</exclude>
+          </excludes>
+        </configuration>
+      </plugin>	
     </plugins>
   </build>
 
