HTTPCORE-406: pull in the test classes from core as a test-jar.

--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -50,6 +50,13 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>${project.version}</version>
+        <type>test-jar</type>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpcore-nio</artifactId>
       <version>${project.version}</version>
