--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -60,6 +60,18 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
         <executions>
@@ -77,7 +89,7 @@
             <exclude>maven-eclipse.xml</exclude>
           </excludes>
         </configuration>
-      </plugin>	
+      </plugin>
     </plugins>
     <resources>
       <resource>
