--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -221,4 +221,28 @@
 
     </plugins>
   </reporting>
+
+  <profiles>
+    <profile>
+      <id>disableOSGiTests</id>
+      <activation>
+        <property>
+          <name>disableOSGiTests</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <skipTests>true</skipTests>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
