Added profile with disabled OSGi tests (corrected)
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1698383 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -235,9 +235,9 @@
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
+            <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
-              <skipTests>true</skipTests>
+              <skip>true</skip>
             </configuration>
           </plugin>
         </plugins>
