Added profile with disabled OSGi tests
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.4.x@1698386 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -221,4 +221,28 @@
 
     </plugins>
   </reporting>
+
+  <profiles>
+    <profile>
+      <id>disableOSGiTests</id>
+      <activation>
+        <property>
+          <name>disableOSGiTests</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
