--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.4.3-SNAPSHOT</version>
+    <version>4.4.3</version>
   </parent>
   <artifactId>httpcore</artifactId>
   <name>Apache HttpCore</name>
