--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   <artifactId>httpcomponents-core</artifactId>
   <name>Apache HttpComponents Core</name>
   <version>5.0-alpha1-SNAPSHOT</version>
-  <description>Apache Core components to build HTTP enabled services</description>
+  <description>Apache HttpComponents Core is a library of components for building HTTP enabled services</description>
   <url>http://hc.apache.org/httpcomponents-core</url>
   <inceptionYear>2005</inceptionYear>
   <packaging>pom</packaging>
