--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -26,16 +26,14 @@
  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpcomponents-core</artifactId>
+    <groupId>org.apache.httpcomponents.core5</groupId>
+    <artifactId>httpcore-parent</artifactId>
     <version>5.0-alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore</artifactId>
-  <name>Apache HttpCore</name>
+  <name>Apache HttpComponents Core</name>
   <inceptionYear>2005</inceptionYear>
-  <description>
-   Apache HttpComponents Core (blocking I/O)
-  </description>
+  <description>Apache HttpComponents Core</description>
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
 
