Changed artifactIds to include major project version (httpcore -> httpcore5)
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1718073 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -27,10 +27,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.httpcomponents.core5</groupId>
-    <artifactId>httpcore-parent</artifactId>
+    <artifactId>httpcore5-parent</artifactId>
     <version>5.0-alpha1-SNAPSHOT</version>
   </parent>
-  <artifactId>httpcore-osgi</artifactId>
+  <artifactId>httpcore5-osgi</artifactId>
   <name>Apache HttpComponents Core OSGi bundle</name>
   <inceptionYear>2005</inceptionYear>
   <description>
