--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -27,10 +27,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.httpcomponents.core5</groupId>
-    <artifactId>httpcore-parent</artifactId>
+    <artifactId>httpcore5-parent</artifactId>
     <version>5.0-alpha1-SNAPSHOT</version>
   </parent>
-  <artifactId>httpcore-ab</artifactId>
+  <artifactId>httpcore5-ab</artifactId>
   <name>Apache HttpComponents Core Benchmarking Tool</name>
   <description>
    Apache AB clone based on HttpCore
