--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -27,10 +27,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.httpcomponents.core5</groupId>
-    <artifactId>httpcore-parent</artifactId>
+    <artifactId>httpcore5-parent</artifactId>
     <version>5.0-alpha1-SNAPSHOT</version>
   </parent>
-  <artifactId>httpcore</artifactId>
+  <artifactId>httpcore5</artifactId>
   <name>Apache HttpComponents Core</name>
   <inceptionYear>2005</inceptionYear>
   <description>Apache HttpComponents Core</description>
