--- a/httpcore/src/main/resources/org/apache/hc/core5/version.properties
+++ b/httpcore/src/main/resources/org/apache/hc/core5/version.properties
@@ -16,7 +16,7 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-info.module    = httpcore
+info.module    = httpcore5
 info.release   = ${pom.version}
 info.timestamp = ${mvn.timestamp}
 # timestamp requires Maven 2.1
