--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <groupId>org.apache.httpcomponents.core5</groupId>
     <artifactId>httpcore5-parent</artifactId>
-    <version>5.0-alpha1-SNAPSHOT</version>
+    <version>5.0-alpha1</version>
   </parent>
   <artifactId>httpcore5-ab</artifactId>
   <name>Apache HttpComponents Core Benchmarking Tool</name>
