--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,9 @@
 
   <modules>
     <module>httpcore</module>
+    <!--
     <module>httpcore-osgi</module>
+    -->
     <module>httpcore-ab</module>
   </modules>
 
@@ -311,6 +313,7 @@
         <configuration>
           <excludes>
             <exclude>.pmd</exclude>
+            <exclude>**/*.iml</exclude>
             <exclude>src/docbkx/resources/**</exclude>
             <exclude>src/test/resources/*.truststore</exclude>
           </excludes>
