--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -40,8 +40,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpcore</artifactId>
+      <groupId>org.apache.httpcomponents.core5</groupId>
+      <artifactId>httpcore5</artifactId>
       <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
@@ -60,19 +60,6 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
-        <configuration>
-          <instructions>
-            <Bundle-Name>Apache ${project.name}</Bundle-Name>
-            <Bundle-SymbolicName>${project.groupId}.httpcore</Bundle-SymbolicName>
-            <_exportcontents>org.apache.hc.core5.http.*;version=${project.version}</_exportcontents>
-            <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency>
-          </instructions>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
