HTTP frame primitives; session input / output buffers for blocking HTTP/2 connections
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1727971 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 
   <modules>
     <module>httpcore5</module>
+    <module>httpcore5-h2</module>
     <module>httpcore5-osgi</module>
     <module>httpcore5-ab</module>
   </modules>
