Exclude org.apache.http.annotation package from binary compatibility check
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.4.x@1747412 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -298,6 +298,9 @@
         <version>${hc.clirr.version}</version>
         <configuration>
           <comparisonVersion>${api.comparison.version}</comparisonVersion>
+          <excludes>
+            <exclude>org/apache/http/annotation/**</exclude>
+          </excludes>
         </configuration>
       </plugin>
       <plugin>
