--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -55,6 +55,11 @@
       <artifactId>commons-logging</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
