Moved integration tests into a separate module
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1763200 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore5-osgi/pom.xml
+++ b/httpcore5-osgi/pom.xml
@@ -52,9 +52,8 @@
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents.core5</groupId>
-      <artifactId>httpcore5</artifactId>
+      <artifactId>httpcore5-testing</artifactId>
       <version>${project.version}</version>
-      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
