Redo RAT excludes to use inheritance and make sure Eclipse files are ignored.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1765384 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -301,7 +301,7 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>0.11</version>
+        <version>0.12</version>
         <executions>
           <execution>
             <phase>verify</phase>
@@ -312,8 +312,11 @@
         </executions>
         <configuration>
           <excludes>
-            <exclude>.pmd</exclude>
+            <exclude>**/.checkstyle</exclude>
+            <exclude>**/.pmd</exclude>
             <exclude>**/*.iml</exclude>
+            <exclude>**/.externalToolBuilders/**</exclude>         
+            <exclude>maven-eclipse.xml</exclude>
             <exclude>src/docbkx/resources/**</exclude>
             <exclude>src/test/resources/*.truststore</exclude>
           </excludes>
