--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     <junit.version>4.12</junit.version>
     <mockito.version>1.10.19</mockito.version>
-    <commons-logging.version>1.2</commons-logging.version>
+    <log4j.version>2.7</log4j.version>
     <hc.stylecheck.version>1</hc.stylecheck.version>
   </properties>
 
@@ -98,9 +98,15 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>${commons-logging.version}</version>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${log4j.version}</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
