Use initial caps in module name "Apache HttpComponents Core Integration Tests".
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1767385 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore5-testing/pom.xml
+++ b/httpcore5-testing/pom.xml
@@ -31,7 +31,7 @@
     <version>5.0-alpha2-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore5-testing</artifactId>
-  <name>Apache HttpComponents Core integration tests</name>
+  <name>Apache HttpComponents Core Integration Tests</name>
   <description>Apache HttpComponents HTTP/2 and HTTP/1.1 core component integration tests</description>
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
