Use initial caps in module name "Apache HttpComponents HTTP/2 Core Components".
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1767386 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore5-h2/pom.xml
+++ b/httpcore5-h2/pom.xml
@@ -32,7 +32,7 @@
   </parent>
   <artifactId>httpcore5-h2</artifactId>
   <name>Apache HttpComponents Core HTTP/2</name>
-  <description>Apache HttpComponents HTTP/2 core components</description>
+  <description>Apache HttpComponents HTTP/2 Core Components</description>
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
 
