--- a/httpcore5-osgi/pom.xml
+++ b/httpcore5-osgi/pom.xml
@@ -31,7 +31,7 @@
     <version>5.0-alpha2-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore5-osgi</artifactId>
-  <name>Apache HttpComponents Core OSGi bundle</name>
+  <name>Apache HttpComponents Core OSGi Bundle</name>
   <inceptionYear>2005</inceptionYear>
   <description>
    Apache HttpComponents Core (OSGi bundle)
