--- a/pom.xml
+++ b/pom.xml
@@ -313,7 +313,7 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>0.11</version>
+        <version>0.12</version>
         <executions>
           <execution>
             <phase>verify</phase>
@@ -324,6 +324,10 @@
         </executions>
         <configuration>
           <excludes>
+            <exclude>**/.externalToolBuilders/**</exclude>			
+            <exclude>**/.pmd</exclude>			
+            <exclude>**/maven-eclipse.xml</exclude>
+            <exclude>**/.checkstyle</exclude>
             <exclude>src/docbkx/resources/**</exclude>
             <exclude>src/test/resources/*.truststore</exclude>
           </excludes>
