Jetty Server compatibility tests
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1773436 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@
     <module>httpcore5</module>
     <module>httpcore5-h2</module>
     <module>httpcore5-ab</module>
-    <module>httpcore5-testing</module>
     <module>httpcore5-osgi</module>
+    <module>httpcore5-testing</module>
   </modules>
 
   <properties>
@@ -353,5 +353,17 @@
 
     </plugins>
   </reporting>
+
+  <profiles>
+    <profile>
+      <id>compat-tests</id>
+      <modules>
+        <module>httpcore5-testing-compat</module>
+      </modules>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+    </profile>
+  </profiles>
 
 </project>
