Docker based HTTP/2 compatibility tests for Apache HTTP server and Nginx server
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1774761 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,7 @@
             <exclude>maven-eclipse.xml</exclude>
             <exclude>src/docbkx/resources/**</exclude>
             <exclude>src/test/resources/*.truststore</exclude>
+            <exclude>**/.dockerignore</exclude>
           </excludes>
         </configuration>
       </plugin>
